fix: overflow

--- a/index.css
+++ b/index.css
@@ -217,17 +217,18 @@ div.gallery {
 }
 @media screen and (max-width:700px){
     .imageGallery {
-        width: 80%;
+        width: 80%;        
     }
     .responsive {
     width: 90%;
+    overflow: hidden;
     align-items: center;
   }
     
 }
  @media screen and (max-width:1040px){
     div.gallery{
-        overflow: scroll;
+        overflow: hidden;
     }
 } 
 
